--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,15 @@ repositories {
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+    implementation 'org.jetbrains:annotations:20.1.0'
+    implementation 'com.google.guava:guava:31.1-jre'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.3.5'
+    implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.3.5'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.4'
 }
 
 test {
